--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "narik-material-starter": {
+    "narik-devextreme-demo": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -25,7 +25,7 @@
                 "plugins": "prepend"
               }
             },
-            "outputPath": "dist/narik-material-starter",
+            "outputPath": "dist/narik-devextreme-demo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -82,19 +82,19 @@
         "serve": {
           "builder": "@angular-builders/dev-server:generic",
           "options": {
-            "browserTarget": "narik-material-starter:build",
+            "browserTarget": "narik-devextreme-demo:build",
             "proxyConfig": "proxy.config.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "narik-material-starter:build:production"
+              "browserTarget": "narik-devextreme-demo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "narik-material-starter:build"
+            "browserTarget": "narik-devextreme-demo:build"
           }
         },
         "test": {
@@ -128,7 +128,7 @@
         }
       }
     },
-    "narik-material-starter-e2e": {
+    "narik-devextreme-demo-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -137,11 +137,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "narik-material-starter:serve"
+            "devServerTarget": "narik-devextreme-demo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "narik-material-starter:serve:production"
+              "devServerTarget": "narik-devextreme-demo:serve:production"
             }
           }
         },
@@ -157,5 +157,5 @@
       }
     }
   },
-  "defaultProject": "narik-material-starter"
+  "defaultProject": "narik-devextreme-demo"
 }
