--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "narik-material-starter",
+  "name": "narik-devextreme-demo",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -68,7 +68,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "narik-webpack-tools": "0.0.5",
+    "narik-webpack-tools": "0.0.6",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
