--- a/package.json
+++ b/package.json
@@ -40,16 +40,14 @@
     "devextreme": "^18.2.4",
     "devextreme-angular": "^18.2.4",
     "stream": "0.0.2",
-
-    "narik-infrastructure": "^1.0.0-beta.6",
-    "narik-common": "^1.0.0-beta.0",
-    "narik-core": "^1.0.0-beta.9",
-    "narik-app-core": "^1.0.0-beta.4",
-    "narik-ui-core": "^1.0.0-beta.7",
-    "narik-client-storage": "^1.0.0-beta.0",
-    "narik-jwt-authentication": "^1.0.0-beta.0",
-
-    "narik-ui-devextreme": "^1.0.0-beta.8"
+    "narik-infrastructure": "^1.0.0",
+    "narik-common": "^1.0.0",
+    "narik-core": "^1.0.0",
+    "narik-app-core": "^1.0.1",
+    "narik-ui-core": "^1.0.0",
+    "narik-client-storage": "^1.0.0",
+    "narik-jwt-authentication": "^1.0.0",
+    "narik-ui-devextreme": "^1.0.0"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^7.0.0",
