--- a/package.json
+++ b/package.json
@@ -11,67 +11,67 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/cdk": "^7.0.3",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@aspnet/signalr": "^1.1.0",
-    "@fortawesome/fontawesome-free": "^5.5.0",
-    "@nebular/theme": "^2.0.2",
-    "@ngx-translate/core": "^11.0.0",
+    "@angular/animations": "~8.0.0",
+    "@angular/cdk": "8.0.0",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
+    "@angular/flex-layout": "8.0.0-beta.26",
+    "@angular/forms": "~8.0.0",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/router": "~8.0.0",
+    "@fortawesome/fontawesome-free": "^5.9.0",
+    "@aspnet/signalr": "^1.1.4",
+    "@nebular/theme": "^4.0.0",
+    "@nebular/eva-icons": "^4.0.0",
+    "eva-icons": "^1.1.1",
+    "@ngx-translate/core": "^11.0.1",
     "angular2-text-mask": "^9.0.0",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
-    "ionicons": "^2.0.1",
-    "localforage": "^1.5.0",
+    "core-js": "^3.1.3",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.11",
-    "nebular-icons": "^1.1.0",
-    "ngforage": "^4.0.2",
-    "ngx-toastr": "^9.1.1",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "devextreme": "^18.2.4",
-    "devextreme-angular": "^18.2.4",
+    "ngforage": "^4.0.3",
+    "ngx-toastr": "^10.0.4",
+    "rxjs": "~6.5.2",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1",
+    "devextreme": "^19.1.3",
+    "devextreme-angular": "^19.1.3",
     "stream": "0.0.2",
-    "narik-app-core": "^1.0.5",
-    "narik-client-storage": "^1.0.0",
-    "narik-common": "^1.0.1",
-    "narik-core": "^1.0.0",
-    "narik-infrastructure": "^1.0.0",
-    "narik-jwt-authentication": "^1.0.0",
-    "narik-ui-core": "^1.0.1",
-    "narik-ui-devextreme": "^1.0.1"
+    "narik-app-core": "^2.0.1",
+    "narik-client-storage": "^2.0.0",
+    "narik-common": "^2.0.0",
+    "narik-core": "^2.0.0",
+    "narik-infrastructure": "^2.0.0",
+    "narik-jwt-authentication": "^2.0.0",
+    "narik-ui-core": "^2.0.1",
+    "narik-ui-devextreme": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^7.0.0",
-    "@angular-builders/dev-server": "^7.0.0",
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.3",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
+    "@angular-builders/custom-webpack": "8.0.2",
+    "@angular-devkit/build-angular": "^0.800.2",
+    "@angular/cli": "^8.0.2",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/language-service": "~8.0.0",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "cheerio": "^1.0.0-rc.2",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "narik-webpack-tools": "0.0.6",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "narik-webpack-tools": "2.0.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   }
 }
