--- a/package.json
+++ b/package.json
@@ -42,15 +42,17 @@
     "devextreme-angular": "^19.1.3",
     "stream": "0.0.2",
     "ng2-validation": "^4.2.0",
+    "class-validator": "^0.9.1",
+    "data-adapter": "^0.2.3",
     "roboto-fontface": "^0.10.0",
     "typeface-exo": "0.0.61",
-    "narik-app-core": "^2.0.5",
+    "narik-app-core": "^2.0.7",
     "narik-client-storage": "^2.0.0",
-    "narik-common": "^2.0.6",
-    "narik-core": "^2.0.6",
+    "narik-common": "^2.0.8",
+    "narik-core": "^2.0.7",
     "narik-infrastructure": "^2.0.5",
     "narik-jwt-authentication": "^2.0.0",
-    "narik-ui-core": "^2.0.8",
+    "narik-ui-core": "^2.0.9",
     "narik-ui-devextreme": "^2.0.8"
   },
   "devDependencies": {
