--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0",
-    "@angular/cdk": "8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
+    "@angular/animations": "~8.2.0",
+    "@angular/cdk": "~8.1.0",
+    "@angular/common": "~8.2.0",
+    "@angular/compiler": "~8.2.0",
+    "@angular/core": "~8.2.0",
     "@angular/flex-layout": "8.0.0-beta.26",
-    "@angular/forms": "~8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/router": "~8.0.0",
+    "@angular/forms": "~8.2.0",
+    "@angular/platform-browser": "~8.2.0",
+    "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/router": "~8.2.0",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@aspnet/signalr": "^1.1.4",
     "@nebular/theme": "^4.0.0",
@@ -46,25 +46,25 @@
     "data-adapter": "^0.2.3",
     "roboto-fontface": "^0.10.0",
     "typeface-exo": "0.0.61",
-    "narik-app-core": "^2.0.9",
-    "narik-client-storage": "^2.0.0",
-    "narik-common": "^2.0.8",
-    "narik-core": "^2.0.7",
-    "narik-infrastructure": "^2.0.6",
-    "narik-jwt-authentication": "^2.0.0",
-    "narik-ui-core": "^2.0.9",
-    "narik-ui-devextreme": "^2.0.8"
+    "narik-app-core": "~2.1.0",
+    "narik-client-storage": "~2.1.0",
+    "narik-common": "~2.1.0",
+    "narik-core": "~2.1.0",
+    "narik-infrastructure": "~2.1.0",
+    "narik-jwt-authentication": "~2.1.0",
+    "narik-ui-core": "~2.1.0",
+    "narik-ui-devextreme": "~2.1.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "8.0.2",
-    "@angular-devkit/build-angular": "^0.800.6",
-    "@angular/cli": "^8.0.6",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
+    "@angular-builders/custom-webpack": "^8.1.0",
+    "@angular-devkit/build-angular": "~0.802.0",
+    "@angular/cli": "~8.2.0",
+    "@angular/compiler-cli": "~8.2.0",
+    "@angular/language-service": "~8.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "cheerio": "^1.0.0-rc.2",
+    "cheerio": "^1.0.0-rc.3",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -73,10 +73,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "narik-webpack-tools": "^2.0.1",
+    "narik-webpack-tools": "2.0.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.5.3"
   }
 }
