--- a/package.json
+++ b/package.json
@@ -41,15 +41,15 @@
     "devextreme": "^19.1.3",
     "devextreme-angular": "^19.1.3",
     "stream": "0.0.2",
-    "ng2-validation": "^4.2.0",
+    "ngx-custom-validators": "^8.0.0",
     "class-validator": "^0.9.1",
     "data-adapter": "^0.2.3",
     "roboto-fontface": "^0.10.0",
     "typeface-exo": "0.0.61",
-    "narik-app-core": "~2.1.0",
+    "narik-app-core": "~2.2.0",
     "narik-client-storage": "~2.1.0",
     "narik-common": "~2.1.0",
-    "narik-core": "~2.1.0",
+    "narik-core": "~2.2.0",
     "narik-infrastructure": "~2.1.0",
     "narik-jwt-authentication": "~2.1.0",
     "narik-ui-core": "~2.1.0",
