--- a/package.json
+++ b/package.json
@@ -11,72 +11,73 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
-    "@angular/cdk": "~8.1.0",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/flex-layout": "8.0.0-beta.26",
-    "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
-    "@fortawesome/fontawesome-free": "^5.9.0",
+    "@angular/animations": "~9.0.2",
+    "@angular/cdk": "~9.1.0",
+    "@angular/common": "~9.0.2",
+    "@angular/compiler": "~9.0.2",
+    "@angular/core": "~9.0.2",
+    "@angular/flex-layout": "~9.0.0-beta.29",
+    "@angular/forms": "~9.0.2",
+    "@angular/platform-browser": "~9.0.2",
+    "@angular/platform-browser-dynamic": "~9.0.2",
+    "@angular/router": "~9.0.2",
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@aspnet/signalr": "^1.1.4",
-    "@nebular/theme": "^4.0.0",
-    "@nebular/eva-icons": "^4.0.0",
-    "eva-icons": "^1.1.1",
-    "@ngx-translate/core": "^11.0.1",
+    "@nebular/theme": "^4.6.0",
+    "@nebular/eva-icons": "^4.6.0",
+    "eva-icons": "^1.1.2",
+    "@ngx-translate/core": "^12.1.1",
     "angular2-text-mask": "^9.0.0",
     "angular2-uuid": "^1.1.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^3.1.3",
+    "bootstrap": "^4.4.1",
     "localforage": "^1.7.3",
-    "lodash": "^4.17.11",
-    "ngforage": "^4.0.3",
-    "ngx-toastr": "^10.0.4",
-    "rxjs": "~6.5.2",
+    "lodash": "^4.17.15",
+    "ngforage": "^5.0.1",
+    "ngx-toastr": "^12.0.0",
+    "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "devextreme": "^19.1.3",
-    "devextreme-angular": "^19.1.3",
+    "zone.js": "~0.10.2",
+    "devextreme": "^19.2.6",
+    "devextreme-angular": "^19.2.6",
     "stream": "0.0.2",
-    "ngx-custom-validators": "^8.0.0",
-    "class-validator": "^0.9.1",
+    "ngx-custom-validators": "^9.0.0",
+    "class-validator": "^0.11.0",
     "data-adapter": "^0.2.3",
     "roboto-fontface": "^0.10.0",
-    "typeface-exo": "0.0.61",
-    "narik-app-core": "~2.2.0",
-    "narik-client-storage": "~2.1.0",
-    "narik-common": "~2.1.0",
-    "narik-core": "~2.2.0",
-    "narik-infrastructure": "~2.1.0",
-    "narik-jwt-authentication": "~2.1.0",
-    "narik-ui-core": "~2.1.0",
-    "narik-ui-devextreme": "~2.1.0"
+    "typeface-exo": "^0.0.61",
+    "@narik/app-core": "^3.0.1",
+    "@narik/client-storage": "^3.0.0",
+    "@narik/common": "^3.0.1",
+    "@narik/core": "^3.0.1",
+    "@narik/infrastructure": "^3.0.0",
+    "@narik/jwt-authentication": "^3.0.0",
+    "@narik/ui-core": "^3.0.0",
+    "@narik/ui-devextreme": "^3.0.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^8.1.0",
-    "@angular-devkit/build-angular": "~0.802.0",
-    "@angular/cli": "~8.2.0",
-    "@angular/compiler-cli": "~8.2.0",
-    "@angular/language-service": "~8.2.0",
-    "@types/jasmine": "~3.3.8",
+    "@angular-builders/custom-webpack": "^9.0.0",
+    "@angular-devkit/build-angular": "~0.900.3",
+    "@angular-devkit/build-ng-packagr": "~0.900.3",
+    "@angular/cli": "~9.0.3",
+    "@angular/compiler-cli": "~9.0.2",
+    "@angular/language-service": "~9.0.2",
+    "@narik/webpack-tools": "3.0.1",
+    "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
     "cheerio": "^1.0.0-rc.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "narik-webpack-tools": "2.0.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^9.0.0",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5"
   }
 }
